--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/42d13n70d92/02370/?unit=us" data-label_1="Rockland MA" data-label_2="WEATHER" data-theme="pure" >Rockland MA WEATHER</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/42d13n70d92/02370/?unit=us" data-font="Roboto" data-days="5" data-theme="pure" >Rockland, MA 02370, USA</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
