--- a/time.html
+++ b/time.html
@@ -4,7 +4,7 @@
     <style>
 #lbl {
     font-family: monospace;
-    font-size: xx-large;
+    font-size: large;
     color: #626262;
     padding: 5px;
     border: 1px solid #ececec;
@@ -18,7 +18,7 @@
     font-size:large;
 }
 body{
-    background-color: aliceblue;
+    background-color: white;
 }
     </style>
 </head>
@@ -40,7 +40,7 @@ body{
     var today = new Date();
     var hrs = today.getHours();
     var dayOfWeek = weekday[today.getDay()];
-    var date = dayOfWeek+" " + today.getDate() + "/" +(today.getMonth()+1) +'/'+today.getFullYear()  ;
+    var date = dayOfWeek+" " + today.getFullYear() + "/" +(today.getMonth()+1) +'/'+today.getDate()  ;
 
     var greet;
 
