--- a/time.html
+++ b/time.html
@@ -36,11 +36,25 @@ body{
     weekday[5] = "Friday";
     weekday[6] = "Saturday";
 
+    month[0] = "Placeholder";
+    month[1] = "January";
+    month[2] = "February";
+    month[3] = "March";
+    month[4] = "April";
+    month[5] = "May";
+    month[6] = "June";
+    month[7] = "July";
+    month[8] = "August";
+    month[9] = "September";
+    month[10] = "October";
+    month[11] = "November";
+    month[12] = "December";
     
     var today = new Date();
     var hrs = today.getHours();
     var dayOfWeek = weekday[today.getDay()];
-    var date = dayOfWeek+" " + today.getFullYear() + "/" +(today.getMonth()+1) +'/'+today.getDate()  ;
+    var monthName = month[today.getMonth()+1];
+    var date = dayOfWeek+", " + monthName + today.getDate() + " of " today.getFullYear() ;
 
     var greet;
 
@@ -48,8 +62,10 @@ body{
         greet = 'Good morning, Joy! ';
     else if (hrs >= 12 && hrs <= 17)
         greet = 'Hiya, Joy! ';
-    else if (hrs >= 17 && hrs <= 24)
+    else if (hrs >= 17 && hrs <= 21)
         greet = 'Good evening, Joy! ';
+    else if (hrs > 21 && <= 24)
+        greet = 'Have a great sleep, Joy! ';
 
     document.getElementById('lbl').innerHTML =
         greet+=`<div id="date"> It's ${date}</div>`;
