--- a/time.html
+++ b/time.html
@@ -1,10 +1,10 @@
-<html> 
+u<html> 
 <head>
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: monospace;
-    font-size: large;
+    font-family: sans-serif;
+    font-size: x-large;
     color: #626262;
     padding: 5px;
     border: 1px solid #ececec;
