--- a/time.html
+++ b/time.html
@@ -1,9 +1,9 @@
-u<html> 
+fu<html> 
 <head>
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: sans-serif;
+    font-family: serif;
     font-size: x-large;
     color: #626262;
     padding: 5px;
