--- a/time.html
+++ b/time.html
@@ -36,6 +36,7 @@ body{
     weekday[5] = "Friday";
     weekday[6] = "Saturday";
 
+    var month = new Array(13);
     month[0] = "Placeholder";
     month[1] = "January";
     month[2] = "February";
