--- a/time.html
+++ b/time.html
@@ -3,7 +3,7 @@
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: serif;
+    font-family: monospace;
     font-size: x-large;
     color: #000000;
     padding: 5px;
