--- a/time.html
+++ b/time.html
@@ -60,13 +60,13 @@ body{
     if (hrs < 12)
         greet = 'Good morning, Joy!  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good afternoon ';
+        greet = 'Good afternoon, Joy! ';
     else if (hrs >= 17 && hrs <= 21)
         greet = 'Good evening, Joy!  ';
     else if (hrs > 21 && hrs <= 24)
         greet = 'Sleep well, Joy! ';
 
     document.getElementById('lbl').innerHTML =
-        greet+=`<div id="date">${date}</div>`;
+        greet+=`<div id="date">It's ${date}</div>`;
 </script> 
 </html>
