--- a/routines.html
+++ b/routines.html
@@ -3,7 +3,7 @@
     <title>Routines</title> 
     <style>
 #lbl {
-    font-family: Helvetica, sans-serif;
+    font-family: monospace;
     font-size: xx-large;
     color: #626262;
     padding: 5px;
