--- a/time.html
+++ b/time.html
@@ -3,7 +3,7 @@
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: Helvetica, sans-serif;
+    font-family: monospace;
     font-size: xx-large;
     color: #626262;
     padding: 5px;
@@ -14,7 +14,7 @@
 
 }
 #weather {
-    font-family: Helvetica, sans-serif;
+    font-family: monospace;
     font-size: medium;
     color: #626262;
     padding: 5px;
