--- a/routines.html
+++ b/routines.html
@@ -4,7 +4,7 @@
     <style>
 #lbl {
     font-family: monospace;
-    font-size: medium;
+    font-size: large;
     color: #626262;
     padding: 5px;
     text-align: left;
